--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "@types/react": "^18.2.6",
     "autoprefixer": "^10.4.14",
     "next": "13.4.3",
     "postcss": "^8.4.23",
