--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@types/react": "^18.2.6",
-    "autoprefixer": "^10.4.14",
     "next": "13.4.3",
-    "postcss": "^8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-redux": "^8.0.5",
-    "tailwindcss": "^3.3.2"
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.14",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.3",
-    "prettier": "^2.8.8"
+    "postcss": "^8.4.23",
+    "prettier": "^2.8.8",
+    "tailwindcss": "^3.3.2"
   }
 }
