--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2",
-    "redux-saga": "^1.2.3"
+    "react-toastify": "^9.1.3",
+    "redux-saga": "^1.2.3",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
