--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-datepicker": "^4.11.0",
     "react-dom": "18.2.0",
+    "react-google-login": "^5.2.2",
     "react-redux": "^8.0.5",
     "react-toastify": "^9.1.3",
     "redux-saga": "^1.2.3",
