--- a/package.json
+++ b/package.json
@@ -16,13 +16,18 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@types/react": "^18.2.6",
     "axios": "^1.4.0",
+    "draft-js": "^0.11.7",
     "formik": "^2.2.9",
+    "install": "^0.13.0",
     "next": "13.4.3",
+    "npm": "^9.6.7",
     "react": "18.2.0",
     "react-datepicker": "^4.11.0",
     "react-dom": "18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-redux": "^8.0.5",
     "react-toastify": "^9.1.3",
+    "redux": "^4.2.1",
     "redux-saga": "^1.2.3",
     "validator": "^13.9.0",
     "yup": "^1.1.1"
