--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@types/react": "^18.2.6",
     "axios": "^1.4.0",
     "formik": "^2.2.9",
+    "js-cookie": "^3.0.5",
     "next": "13.4.3",
+    "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-datepicker": "^4.11.0",
     "react-dom": "18.2.0",
