--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.1",
+    "@mui/styles": "^5.13.2",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/react": "^18.2.6",
     "axios": "^1.4.0",
@@ -25,8 +27,10 @@
     "react-dom": "18.2.0",
     "react-google-login": "^5.2.2",
     "react-redux": "^8.0.5",
+    "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
     "redux-saga": "^1.2.3",
+    "slick-carousel": "^1.8.1",
     "validator": "^13.9.0",
     "yup": "^1.1.1"
   },
