--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-redux": "^8.0.5",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
+    "redux-logger": "^3.0.6",
     "redux-saga": "^1.2.3",
     "slick-carousel": "^1.8.1",
     "validator": "^13.9.0",
