fix: multiple issues on employer and consultant side

--- a/package.json
+++ b/package.json
@@ -22,14 +22,19 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@types/react": "^18.2.6",
     "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
     "dayjs": "^1.11.7",
     "formik": "^2.2.9",
     "js-cookie": "^3.0.5",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.31",
+    "moment": "^2.29.4",
     "next": "^13.4.3",
     "next-auth": "^4.22.1",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-chat-ui": "^0.4.0",
+    "react-date-range": "^1.4.0",
     "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
