--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@chatscope/chat-ui-kit-react": "^1.10.1",
     "@chatscope/chat-ui-kit-styles": "^1.4.0",
-    "@emotion/react": "^11.11.0",
+    "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/lab": "^5.0.0-alpha.132",
@@ -34,16 +34,19 @@
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-chat-ui": "^0.4.0",
+    "react-chat-widget": "^3.1.4",
     "react-date-range": "^1.4.0",
     "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
     "react-redux": "^8.0.5",
+    "react-scroll-to-bottom": "^4.2.0",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.2.3",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.6.2",
     "validator": "^13.9.0",
     "yup": "^1.1.1"
   },
